[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[project]
name = "yang-web"
version = "1.4.0"
description = "Yang Web Arsenal ГўВҖВ” Г§ВҰВ»Г§ВәВҝ CTF Web Г§В‘ВһГҘВЈВ«ГҘВҶВӣГҘВҲВҖ"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "XiaoYang", email = "xiaoyang@example.com"}
]
keywords = ["ctf", "web", "security", "pentest", "payload", "decoder", "jwt"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.scripts]
yang-web = "yang_web.cli:main"

[project.urls]
Homepage = "https://github.com/XiaoYang/yang-web"
Repository = "https://github.com/XiaoYang/yang-web.git"
Issues = "https://github.com/XiaoYang/yang-web/issues"

[tool.setuptools.packages.find]
where = ["."]
